// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migration CLI migrates complex website: copy 1`] = `
[
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/complex_website/website/blog",
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_complex_site/blog",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/complex_website/website/pages/en",
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_complex_site/src/pages",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/complex_website/website/static",
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_complex_site/static",
  ],
]
`;

exports[`migration CLI migrates complex website: mkdirp 1`] = `
[
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_complex_site/src/pages",
  ],
]
`;

exports[`migration CLI migrates complex website: mkdirs 1`] = `[]`;

exports[`migration CLI migrates complex website: write 1`] = `
[
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_complex_site/ianaio.config.js",
    "module.exports={
  "title": "Ianaio",
  "tagline": "Easy to Maintain Open Source Documentation Websites",
  "url": "https://ianaio.io",
  "baseUrl": "/",
  "organizationName": "ianaio",
  "projectName": "ianaio",
  "noIndex": false,
  "scripts": [
    "https://buttons.github.io/buttons.js",
    "https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js",
    "/js/code-blocks-buttons.js"
  ],
  "favicon": "img/ianaio.ico",
  "customFields": {
    "users": {
      "caption": "DevSpace",
      "image": "/img/users/devspace.svg",
      "infoLink": "https://devspace.cloud/docs/",
      "fbOpenSource": false,
      "pinned": false
    },
    "translationRecruitingLink": "https://crowdin.com/project/ianaio",
    "ianaioAppId": "199138890728411"
  },
  "onBrokenLinks": "log",
  "onBrokenMarkdownLinks": "log",
  "presets": [
    [
      "@ianaio/preset-classic",
      {
        "docs": {
          "showLastUpdateAuthor": true,
          "showLastUpdateTime": true,
          "editUrl": "https://github.com/ianaio/ianaio/edit/main/docs/"
        },
        "blog": {},
        "theme": {
          "customCss": "../complex_website/src/css/customTheme.css"
        },
        "googleAnalytics": {
          "trackingID": "UA-44373548-31"
        }
      }
    ]
  ],
  "plugins": [],
  "themeConfig": {
    "navbar": {
      "title": "Ianaio",
      "logo": {
        "src": "img/ianaio.svg"
      },
      "items": [
        {
          "to": "docs/installation",
          "label": "Docs",
          "position": "left"
        },
        {
          "to": "docs/tutorial-setup",
          "label": "Tutorial",
          "position": "left"
        },
        {
          "to": "/users",
          "label": "Users",
          "position": "left"
        },
        {
          "href": "https://github.com/ianaio/ianaio",
          "label": "GitHub",
          "position": "left"
        }
      ]
    },
    "image": "img/ianaio.png",
    "footer": {
      "links": [
        {
          "title": "Community",
          "items": [
            {
              "label": "Twitter",
              "to": "https://twitter.com/ianaio"
            }
          ]
        }
      ],
      "copyright": "Copyright © 2023 Ianaio Inc.",
      "logo": {
        "src": "img/ianaio_monochrome.svg"
      }
    },
    "algolia": {
      "apiKey": "3eb9507824b8be89e7a199ecaa1a9d2c",
      "indexName": "ianaio",
      "algoliaOptions": {
        "facetFilters": [
          "language:LANGUAGE",
          "version:VERSION"
        ]
      }
    }
  }
}",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_complex_site/package.json",
    "{
  "name": "ianaio-1-website",
  "version": "2.0.0-alpha.58",
  "private": true,
  "scripts": {
    "start": "ianaio start",
    "build": "ianaio build",
    "publish-gh-pages": "ianaio-publish",
    "examples": "ianaio-examples",
    "write-translations": "ianaio-write-translations",
    "ianaio-version": "ianaio-version",
    "rename-version": "ianaio-rename-version",
    "crowdin-upload": "crowdin --config ../crowdin.yaml upload sources --auto-update -b master",
    "crowdin-download": "crowdin --config ../crowdin.yaml download -b master",
    "swizzle": "ianaio swizzle",
    "deploy": "ianaio deploy",
    "ianaio": "ianaio"
  },
  "dependencies": {
    "@ianaio/core": "<CURRENT_VERSION>",
    "@ianaio/preset-classic": "<CURRENT_VERSION>",
    "clsx": "^1.1.1",
    "react": "^17.0.2",
    "react-dom": "^17.0.2"
  }
}",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_complex_site/src/css/customTheme.css",
    ":root{
  --ifm-color-primary-lightest: #3CAD6E;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-light: #33925D;
  --ifm-color-primary: #2E8555;
  --ifm-color-primary-dark: #29784C;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205D3B;
}
",
  ],
]
`;

exports[`migration CLI migrates missing versions: copy 1`] = `
[
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/missing_version_website/website/blog",
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_missing_version_site/blog",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/missing_version_website/website/pages/en",
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_missing_version_site/src/pages",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/missing_version_website/website/static",
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_missing_version_site/static",
  ],
]
`;

exports[`migration CLI migrates missing versions: mkdirp 1`] = `
[
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_missing_version_site/src/pages",
  ],
]
`;

exports[`migration CLI migrates missing versions: mkdirs 1`] = `[]`;

exports[`migration CLI migrates missing versions: write 1`] = `
[
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_missing_version_site/ianaio.config.js",
    "module.exports={
  "title": "Ianaio",
  "tagline": "Easy to Maintain Open Source Documentation Websites",
  "url": "https://ianaio.io",
  "baseUrl": "/",
  "organizationName": "ianaio",
  "projectName": "ianaio",
  "noIndex": false,
  "scripts": [
    "https://buttons.github.io/buttons.js",
    "https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js",
    "/js/code-blocks-buttons.js"
  ],
  "favicon": "img/ianaio.ico",
  "customFields": {
    "users": {
      "caption": "DevSpace",
      "image": "/img/users/devspace.svg",
      "infoLink": "https://devspace.cloud/docs/",
      "fbOpenSource": false,
      "pinned": false
    },
    "translationRecruitingLink": "https://crowdin.com/project/ianaio",
    "ianaioAppId": "199138890728411"
  },
  "onBrokenLinks": "log",
  "onBrokenMarkdownLinks": "log",
  "presets": [
    [
      "@ianaio/preset-classic",
      {
        "docs": {
          "showLastUpdateAuthor": true,
          "showLastUpdateTime": true,
          "editUrl": "https://github.com/ianaio/ianaio/edit/main/docs/"
        },
        "blog": {},
        "theme": {
          "customCss": "../missing_version_website/src/css/customTheme.css"
        },
        "googleAnalytics": {
          "trackingID": "UA-44373548-31"
        }
      }
    ]
  ],
  "plugins": [],
  "themeConfig": {
    "navbar": {
      "title": "Ianaio",
      "logo": {
        "src": "img/ianaio.svg"
      },
      "items": [
        {
          "to": "docs/installation",
          "label": "Docs",
          "position": "left"
        },
        {
          "to": "docs/tutorial-setup",
          "label": "Tutorial",
          "position": "left"
        },
        {
          "to": "/users",
          "label": "Users",
          "position": "left"
        },
        {
          "href": "https://github.com/ianaio/ianaio",
          "label": "GitHub",
          "position": "left"
        }
      ]
    },
    "image": "img/ianaio.png",
    "footer": {
      "links": [
        {
          "title": "Community",
          "items": [
            {
              "label": "Twitter",
              "to": "https://twitter.com/ianaio"
            }
          ]
        }
      ],
      "copyright": "Copyright © 2023 Ianaio Inc.",
      "logo": {
        "src": "img/ianaio_monochrome.svg"
      }
    },
    "algolia": {
      "apiKey": "3eb9507824b8be89e7a199ecaa1a9d2c",
      "indexName": "ianaio",
      "algoliaOptions": {
        "facetFilters": [
          "language:LANGUAGE",
          "version:VERSION"
        ]
      }
    }
  }
}",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_missing_version_site/package.json",
    "{
  "name": "ianaio-1-website",
  "version": "2.0.0-alpha.58",
  "private": true,
  "scripts": {
    "start": "ianaio start",
    "build": "ianaio build",
    "publish-gh-pages": "ianaio-publish",
    "examples": "ianaio-examples",
    "write-translations": "ianaio-write-translations",
    "ianaio-version": "ianaio-version",
    "rename-version": "ianaio-rename-version",
    "crowdin-upload": "crowdin --config ../crowdin.yaml upload sources --auto-update -b master",
    "crowdin-download": "crowdin --config ../crowdin.yaml download -b master",
    "swizzle": "ianaio swizzle",
    "deploy": "ianaio deploy",
    "ianaio": "ianaio"
  },
  "dependencies": {
    "@ianaio/core": "<CURRENT_VERSION>",
    "@ianaio/preset-classic": "<CURRENT_VERSION>",
    "clsx": "^1.1.1",
    "react": "^17.0.2",
    "react-dom": "^17.0.2"
  }
}",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_missing_version_site/src/css/customTheme.css",
    ":root{
  --ifm-color-primary-lightest: #3CAD6E;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-light: #33925D;
  --ifm-color-primary: #2E8555;
  --ifm-color-primary-dark: #29784C;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205D3B;
}
",
  ],
]
`;

exports[`migration CLI migrates simple website: copy 1`] = `
[
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/simple_website/website/pages/en",
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_simple_site/src/pages",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/simple_website/website/static",
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_simple_site/static",
  ],
]
`;

exports[`migration CLI migrates simple website: mkdirp 1`] = `
[
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_simple_site/src/pages",
  ],
]
`;

exports[`migration CLI migrates simple website: mkdirs 1`] = `[]`;

exports[`migration CLI migrates simple website: write 1`] = `
[
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_simple_site/ianaio.config.js",
    "module.exports={
  "title": "Ianaio",
  "tagline": "Easy to Maintain Open Source Documentation Websites",
  "url": "https://ianaio.io",
  "baseUrl": "/",
  "organizationName": "ianaio",
  "projectName": "ianaio",
  "noIndex": false,
  "scripts": [
    "https://buttons.github.io/buttons.js",
    "https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js",
    "/js/code-blocks-buttons.js"
  ],
  "favicon": "img/ianaio.ico",
  "customFields": {
    "users": {
      "caption": "DevSpace",
      "image": "/img/users/devspace.svg",
      "infoLink": "https://devspace.cloud/docs/",
      "fbOpenSource": false,
      "pinned": false
    },
    "translationRecruitingLink": "https://crowdin.com/project/ianaio",
    "ianaioAppId": "199138890728411"
  },
  "onBrokenLinks": "log",
  "onBrokenMarkdownLinks": "log",
  "presets": [
    [
      "@ianaio/preset-classic",
      {
        "docs": {
          "showLastUpdateAuthor": true,
          "showLastUpdateTime": true,
          "editUrl": "https://github.com/ianaio/ianaio/edit/main/docs/",
          "path": "../simple_website/docs"
        },
        "blog": {},
        "theme": {
          "customCss": "../simple_website/src/css/customTheme.css"
        },
        "googleAnalytics": {
          "trackingID": "UA-44373548-31"
        }
      }
    ]
  ],
  "plugins": [],
  "themeConfig": {
    "navbar": {
      "title": "Ianaio",
      "logo": {
        "src": "img/ianaio.svg"
      },
      "items": [
        {
          "to": "docs/installation",
          "label": "Docs",
          "position": "left"
        },
        {
          "to": "docs/tutorial-setup",
          "label": "Tutorial",
          "position": "left"
        },
        {
          "to": "/users",
          "label": "Users",
          "position": "left"
        },
        {
          "href": "https://github.com/ianaio/ianaio",
          "label": "GitHub",
          "position": "left"
        }
      ]
    },
    "image": "img/ianaio.png",
    "footer": {
      "links": [
        {
          "title": "Community",
          "items": [
            {
              "label": "Twitter",
              "to": "https://twitter.com/ianaio"
            }
          ]
        }
      ],
      "copyright": "Copyright © 2023 Ianaio Inc.",
      "logo": {
        "src": "img/ianaio_monochrome.svg"
      }
    },
    "algolia": {
      "apiKey": "3eb9507824b8be89e7a199ecaa1a9d2c",
      "indexName": "ianaio",
      "algoliaOptions": {
        "facetFilters": [
          "language:LANGUAGE",
          "version:VERSION"
        ]
      }
    }
  }
}",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_simple_site/package.json",
    "{
  "name": "ianaio-1-website",
  "version": "2.0.0-alpha.58",
  "private": true,
  "scripts": {
    "start": "ianaio start",
    "build": "ianaio build",
    "publish-gh-pages": "ianaio-publish",
    "examples": "ianaio-examples",
    "write-translations": "ianaio-write-translations",
    "ianaio-version": "ianaio-version",
    "rename-version": "ianaio-rename-version",
    "crowdin-upload": "crowdin --config ../crowdin.yaml upload sources --auto-update -b master",
    "crowdin-download": "crowdin --config ../crowdin.yaml download -b master",
    "swizzle": "ianaio swizzle",
    "deploy": "ianaio deploy",
    "ianaio": "ianaio"
  },
  "dependencies": {
    "@ianaio/core": "<CURRENT_VERSION>",
    "@ianaio/preset-classic": "<CURRENT_VERSION>",
    "clsx": "^1.1.1",
    "react": "^17.0.2",
    "react-dom": "^17.0.2"
  }
}",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/migrated_simple_site/src/css/customTheme.css",
    ":root{
  --ifm-color-primary-lightest: #3CAD6E;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-light: #33925D;
  --ifm-color-primary: #2E8555;
  --ifm-color-primary-dark: #29784C;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205D3B;
}
",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/simple_website/docs/api-commands.md",
    "---
id: commands
title: CLI Commands
---
## Doc
",
  ],
  [
    "<PROJECT_ROOT>/packages/ianaio-migrate/src/__tests__/__fixtures__/simple_website/docs/api-doc-markdown.md",
    "---
id: doc-markdown
title: Markdown Features
---
## Doc
",
  ],
]
`;
